# SHIFT

./: .gitignore  CHANGELOG.md  CMakeLists.txt  HACKING.md  OVERVIEW.md.license  README.md
.github/workflows/: mirror.yml
.reuse/: dep5
LICENSES/: EUPL-1.2.txt
color-schemes/: CMakeLists.txt  ShiftDark.colors  ShiftLight.colors
components/: CMakeLists.txt
components/gamingshellplugin/: CMakeLists.txt  gamelauncherprovider.cpp  gamelauncherprovider.h  gamemodecontrol.cpp  gamemodecontrol.h  gamepaddevice.cpp  gamepaddevice.h  gamepadmanager.cpp  gamepadmanager.h  powerprofilecontrol.cpp  powerprofilecontrol.h
components/mobileshell/: CMakeLists.txt
components/quicksettingsplugin/: quicksettingsconfig.cpp
components/shellsettingsplugin/: kwinsettings.cpp  kwinsettings.h  mobileshellsettings.cpp  mobileshellsettings.h
components/wallpaperimageplugin/: wallpaperplugin.cpp
components/waydroidintegrationplugin/: waydroidapplicationlistmodel.cpp  waydroidapplicationlistmodel.h  waydroiddbusclient.cpp  waydroiddbusclient.h  waydroiddbusobject.cpp  waydroiddbusobject.h
containments/taskpanel/: taskpanel.cpp  taskpanel.h
envmanager/: config.h
icons/: CMakeLists.txt
kded/start/: CMakeLists.txt  start.cpp
kwin/: CMakeLists.txt
kwin/decorations/: CMakeLists.txt
kwin/effects/: CMakeLists.txt
kwin/scripts/: CMakeLists.txt
lookandfeel/: Messages.sh  metadata.json
lookandfeel/contents/: defaults
quicksettings/: CMakeLists.txt
quicksettings/dynamictiling/: metadata.json
screenshots/: SHIFT-touch.png.license  quick_DesktopDemo.webm  quick_DesktopDemo_docked.webm  quick_DesktopDemo_tiling.webm.license  quick_DesktopDemo_tilling.webm
shell/contents/: layout.js.in
tests/: CMakeLists.txt  README.md  check-convergence-dock-invariant.sh
wallpapers/: CMakeLists.txt
(+89 files in other folders)
